<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ProfileFragment">

    <!-- Background Circle -->
    <ImageView
            android:id="@+id/iv_background_circle"
            android:layout_width="match_parent"
            android:layout_height="346dp"
            android:layout_marginTop="-70dp"
            android:background="@drawable/circle_background_profile"
            android:contentDescription="@string/background_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <!-- Profile Picture -->
    <ImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/baseline_account_circle_24"
            android:scaleType="centerCrop"
            android:contentDescription="@string/profile_image"
            android:layout_marginTop="37dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <!-- Name -->
    <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="18sp"
            android:textColor="@color/lightGray"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/iv_profile_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            android:textSize="16sp"
            android:textColor="@color/lightGray"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Menu Inside Circle -->
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="-20dp"
            app:layout_constraintTop_toBottomOf="@id/iv_background_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <!-- Background Circle for Body -->
        <ImageView
                android:id="@+id/iv_background_body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/circle_background_body"
                android:contentDescription="@string/background_body"
                android:clipToOutline="true"/>

        <!-- Menu List -->
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="16dp">

            <!-- Language Settings with Icon -->
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp">
                <ImageView
                        android:id="@+id/iv_language_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_history"
                        android:contentDescription="@string/language_settings"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="8dp"/>
                <TextView
                        android:id="@+id/tv_language_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language_settings"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        android:textColor="@color/gray"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <!-- About Us with Icon -->
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp">
                <ImageView
                        android:id="@+id/iv_about_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_home_black_24dp"
                        android:contentDescription="@string/about_us"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="8dp"/>
                <TextView
                        android:id="@+id/tv_about_us"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/gray"
                        android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <!-- Logout with Icon -->
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp">
                <ImageView
                        android:id="@+id/iv_logout_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/logout"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="8dp"/>
                <TextView
                        android:id="@+id/tv_logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logout"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/red_200"
                        android:layout_gravity="center_vertical"/>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
